--- a/views/admin/dashboard/view_dashboard.ejs
+++ b/views/admin/dashboard/view_dashboard.ejs
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%- include('partials/header.ejs') %>
+    <%- include('../../partials/header.ejs') %>
   </head>
 
   <body id="page-top">
     <div id="wrapper">
-      <%- include('partials/sidebar.ejs') %>
+      <%- include('../../partials/sidebar.ejs') %>
 
       <div id="content-wrapper" class="d-flex flex-column">
         <div id="content">
-          <%- include('partials/navbar.ejs') %>
+          <%- include('../../partials/navbar.ejs') %>
           <div class="container-fluid">
             <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
           </div>
         </div>
-        <%- include('partials/footer.ejs') %>
+        <%- include('../../partials/footer.ejs') %>
       </div>
     </div>
 
@@ -61,6 +61,6 @@
       </div>
     </div>
 
-    <%- include('partials/js.ejs') %>
+    <%- include('../../partials/js.ejs') %>
   </body>
 </html>
