--- a/views/admin/category/table_category.ejs
+++ b/views/admin/category/table_category.ejs
@@ -13,6 +13,32 @@
           <th>Action</th>
         </tr>
       </thead>
+      <tbody>
+        <% for(let i = 0; i < category.length; i++) { %>
+        <tr>
+          <td><%= i + 1 %></td>
+          <td><%= category[i].name %></td>
+          <td>
+            <form
+              action="/admin/category/<%= category[i].id %>?_method=DELETE"
+              method="POST"
+            >
+              <a
+                href="javascript:void()"
+                type="button"
+                class="btn btn-warning btn-circle button-update"
+                data-id="<%= category[i].id %>"
+                data-name="<%= category[i].name %>"
+                ><i class="fas fa-edit"></i
+              ></a>
+              <button href="" type="submit" class="btn btn-danger btn-circle">
+                <i class="fas fa-trash"></i>
+              </button>
+            </form>
+          </td>
+        </tr>
+        <% } %>
+      </tbody>
     </table>
   </div>
 </div>
