--- a/views/admin/category/view_category.ejs
+++ b/views/admin/category/view_category.ejs
@@ -19,9 +19,15 @@
             <h1 class="h3 mb-4 text-gray-800">Category</h1>
             <div class="card shadow mb-4">
               <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">
-                  DataTables Example
-                </h6>
+                <!-- Button trigger modal -->
+                <button
+                  type="button"
+                  class="btn btn-primary"
+                  data-toggle="modal"
+                  data-target="#add-modal"
+                >
+                  Add
+                </button>
               </div>
               <%- include('table_category.ejs') %>
             </div>
@@ -73,12 +79,24 @@
       </div>
     </div>
 
-    <%- include('../../partials/js.ejs') %>
+    <%- include('add_modal.ejs') %> <%- include('edit_modal.ejs') %> <%-
+    include('../../partials/js.ejs') %>
+
     <!-- Page level plugins -->
     <script src="/sb-admin-2/vendor/datatables/jquery.dataTables.min.js"></script>
     <script src="/sb-admin-2/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
     <!-- Page level custom scripts -->
     <script src="/sb-admin-2/js/demo/datatables-demo.js"></script>
+
+    <script>
+      $("#dataTable").on("click", ".button-update", function () {
+        let id = $(this).data("id");
+        let name = $(this).data("name");
+        $("#edit-modal").modal("show");
+        $(".id").val(id);
+        $(".name").val(name);
+      });
+    </script>
   </body>
 </html>
