Error Handling & Alert

--- a/views/admin/category/view_category.ejs
+++ b/views/admin/category/view_category.ejs
@@ -16,6 +16,7 @@
         <div id="content">
           <%- include('../../partials/navbar.ejs') %>
           <div class="container-fluid">
+            <%- include('../../partials/message.ejs') %>
             <h1 class="h3 mb-4 text-gray-800">Category</h1>
             <div class="card shadow mb-4">
               <div class="card-header py-3">
