--- a/views/admin/category/add_modal.ejs
+++ b/views/admin/category/add_modal.ejs
@@ -24,7 +24,14 @@
         <div class="modal-body">
           <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" class="form-control" name="name" id="name" />
+            <input
+              type="text"
+              class="form-control"
+              name="name"
+              id="name"
+              placeholder="Enter Name"
+              required
+            />
           </div>
         </div>
         <div class="modal-footer">
