--- a/views/admin/bank/view_bank.ejs
+++ b/views/admin/bank/view_bank.ejs
@@ -16,12 +16,18 @@
         <div id="content">
           <%- include('../../partials/navbar.ejs') %>
           <div class="container-fluid">
+            <%- include('../../partials/message.ejs') %>
             <h1 class="h3 mb-4 text-gray-800">Bank</h1>
             <div class="card shadow mb-4">
               <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">
-                  DataTables Example
-                </h6>
+                <button
+                  type="button"
+                  class="btn btn-primary"
+                  data-toggle="modal"
+                  data-target="#add-modal"
+                >
+                  Add
+                </button>
               </div>
               <%- include('table_bank.ejs') %>
             </div>
@@ -73,12 +79,26 @@
       </div>
     </div>
 
-    <%- include('../../partials/js.ejs') %>
+    <%- include('add_modal.ejs') %> <%- include('edit_modal.ejs') %> <%-
+    include('../../partials/js.ejs') %>
     <!-- Page level plugins -->
     <script src="/sb-admin-2/vendor/datatables/jquery.dataTables.min.js"></script>
     <script src="/sb-admin-2/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
     <!-- Page level custom scripts -->
     <script src="/sb-admin-2/js/demo/datatables-demo.js"></script>
+    <script>
+      $("#dataTable").on("click", ".button-update", function () {
+        let id = $(this).data("id");
+        let name = $(this).data("name");
+        let nameBank = $(this).data("namebank");
+        let nomorRekening = $(this).data("nomorrekening");
+        $("#edit-modal").modal("show");
+        $(".id").val(id);
+        $(".name").val(name);
+        $(".nameBank").val(nameBank);
+        $(".nomorRekening").val(nomorRekening);
+      });
+    </script>
   </body>
 </html>
