--- a/views/partials/js.ejs
+++ b/views/partials/js.ejs
@@ -7,3 +7,5 @@
 
 <!-- Custom scripts for all pages-->
 <script src="/sb-admin-2/vendor/js/sb-admin-2.min.js"></script>
+
+<script src="https://cdn.ckeditor.com/4.16.2/standard/ckeditor.js"></script>
