--- a/views/admin/category/view_category.ejs
+++ b/views/admin/category/view_category.ejs
@@ -1,103 +1,76 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <%- include('../../partials/header.ejs') %>
-    <link
-      href="/sb-admin-2/vendor/datatables/dataTables.bootstrap4.min.css"
-      rel="stylesheet"
-    />
-  </head>
+<%- include('../../partials/header.ejs') %>
 
-  <body id="page-top">
-    <div id="wrapper">
-      <%- include('../../partials/sidebar.ejs') %>
+<!-- Page Wrapper -->
+<div id="wrapper">
 
-      <div id="content-wrapper" class="d-flex flex-column">
-        <div id="content">
-          <%- include('../../partials/navbar.ejs') %>
-          <div class="container-fluid">
-            <%- include('../../partials/message.ejs') %>
-            <h1 class="h3 mb-4 text-gray-800">Category</h1>
-            <div class="card shadow mb-4">
-              <div class="card-header py-3">
-                <!-- Button trigger modal -->
-                <button
-                  type="button"
-                  class="btn btn-primary"
-                  data-toggle="modal"
-                  data-target="#add-modal"
-                >
-                  Add
-                </button>
-              </div>
-              <%- include('table_category.ejs') %>
-            </div>
-          </div>
-        </div>
-        <%- include('../../partials/footer.ejs') %>
+  <%- include('../../partials/sidebar.ejs') %>
+
+  <!-- Content Wrapper -->
+  <div id="content-wrapper" class="d-flex flex-column">
+
+    <!-- Main Content -->
+    <div id="content">
+
+      <%- include('../../partials/navbar.ejs') %>
+
+      <!-- Begin Page Content -->
+      <div class="container-fluid">
+        <%- include('../../partials/message.ejs') %>
+        <!-- Page Heading -->
+        <h1 class="h3 mb-4 text-gray-800">Category</h1>
+        <!-- End Heading -->
+
+        <%- include('table_category.ejs') %>
+
+      </div>
+      <!-- /.container-fluid -->
+
+    </div>
+    <!-- End of Main Content -->
+
+    <%- include('../../partials/footer.ejs') %>
+
+  </div>
+  <!-- End of Content Wrapper -->
+
+</div>
+<!-- End of Page Wrapper -->
+
+<!-- Scroll to Top Button-->
+<a class="scroll-to-top rounded" href="#page-top">
+  <i class="fas fa-angle-up"></i>
+</a>
+
+<!-- Logout Modal-->
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+        <a class="btn btn-primary" href="login.html">Logout</a>
       </div>
     </div>
+  </div>
+</div>
 
-    <a class="scroll-to-top rounded" href="#page-top">
-      <i class="fas fa-angle-up"></i>
-    </a>
+<%- include('add_modal.ejs') %>
+<%- include('edit_modal.ejs') %>
+<%- include('../../partials/js.ejs') %>
 
-    <div
-      class="modal fade"
-      id="logoutModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-            <button
-              class="close"
-              type="button"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            Select "Logout" below if you are ready to end your current session.
-          </div>
-          <div class="modal-footer">
-            <button
-              class="btn btn-secondary"
-              type="button"
-              data-dismiss="modal"
-            >
-              Cancel
-            </button>
-            <a class="btn btn-primary" href="login.html">Logout</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <%- include('add_modal.ejs') %> <%- include('edit_modal.ejs') %> <%-
-    include('../../partials/js.ejs') %>
-
-    <!-- Page level plugins -->
-    <script src="/sb-admin-2/vendor/datatables/jquery.dataTables.min.js"></script>
-    <script src="/sb-admin-2/vendor/datatables/dataTables.bootstrap4.min.js"></script>
-
-    <!-- Page level custom scripts -->
-    <script src="/sb-admin-2/js/demo/datatables-demo.js"></script>
-
-    <script>
-      $("#dataTable").on("click", ".button-update", function () {
-        let id = $(this).data("id");
-        let name = $(this).data("name");
-        $("#edit-modal").modal("show");
-        $(".id").val(id);
-        $(".name").val(name);
-      });
-    </script>
-  </body>
-</html>
+<script>
+  $('#dataTable').on('click', '.button-update', function () {
+    let id = $(this).data('id');
+    let name = $(this).data('name');
+    $('#edit-modal').modal('show');
+    $('.id').val(id);
+    $('.name').val(name);
+  })
+</script>
