--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,4 @@
+<!-- Topbar -->
 <nav
   class="
     navbar navbar-expand navbar-light
@@ -32,24 +33,15 @@
         aria-expanded="false"
       >
         <span class="mr-2 d-none d-lg-inline text-gray-600 small"
-          >Valerie Luna</span
+          ><%= user.username %></span
         >
-        <img
-          class="img-profile rounded-circle"
-          src="https://source.unsplash.com/QAB-WJcbgJk/60x60"
-        />
       </a>
       <!-- Dropdown - User Information -->
       <div
         class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
         aria-labelledby="userDropdown"
       >
-        <a
-          class="dropdown-item"
-          href="#"
-          data-toggle="modal"
-          data-target="#logoutModal"
-        >
+        <a class="dropdown-item" href="/admin/logout">
           <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
           Logout
         </a>
@@ -57,3 +49,4 @@
     </li>
   </ul>
 </nav>
+<!-- End of Topbar -->
