--- a/views/admin/booking/table_booking.ejs
+++ b/views/admin/booking/table_booking.ejs
@@ -5,7 +5,12 @@
   </div>
   <div class="card-body">
     <div class="table-responsive">
-      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+      <table
+        class="table table-bordered"
+        id="dataTable"
+        width="100%"
+        cellspacing="0"
+      >
         <thead>
           <tr>
             <th>No</th>
@@ -22,15 +27,22 @@
           <tr>
             <td><%= i + 1 %></td>
             <td>#<%= booking[i].invoice %></td>
-            <td><%= booking[i].bookingStartDate.toLocaleString().split(',')[0] %> s/d
-              <%= booking[i].bookingEndDate.toLocaleString().split(',')[0] %>
+            <td>
+              <%= booking[i].startDate.toLocaleString().split(',')[0] %> s/d <%=
+              booking[i].endDate.toLocaleString().split(',')[0] %>
             </td>
             <td><%= booking[i].itemId.title %></td>
-            <td><%= booking[i].memberId.firstName %> <%= booking[i].memberId.lastName %></td>
-            <td><%= booking[i].payments.status %></td>
             <td>
-              <a href="/admin/booking/<%= booking[i].id %>" class="btn btn-success btn-circle btn-sm button-update"><i
-                  class=" fas fa-eye"></i></a>
+              <%= booking[i].memberId.firstName %> <%=
+              booking[i].memberId.lastName %>
+            </td>
+            <td><%= booking[i].payment.status %></td>
+            <td>
+              <a
+                href="/admin/booking/<%= booking[i].id %>"
+                class="btn btn-success btn-circle btn-sm button-update"
+                ><i class="fas fa-eye"></i
+              ></a>
             </td>
           </tr>
           <% } %>
