--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
                 <div class="col-lg-12">
                   <div class="p-5">
                     <div class="text-center">
-                      <h1 class="h4 text-gray-900 mb-4">Staycation</h1>
+                      <h1 class="h4 text-gray-900 mb-4">Staycation Admin</h1>
                     </div>
                     <form class="user" action="/admin/signin" method="POST">
                       <div class="form-group">
@@ -48,14 +48,13 @@
                           type="text"
                           class="form-control form-control-user"
                           name="username"
-                          placeholder="Enter Usernamae..."
+                          placeholder="Username"
                         />
                       </div>
                       <div class="form-group">
                         <input
                           type="password"
                           class="form-control form-control-user"
-                          id="exampleInputPassword"
                           name="password"
                           placeholder="Password"
                         />
