--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -32,9 +32,13 @@
         aria-haspopup="true"
         aria-expanded="false"
       >
-        <span class="mr-2 d-none d-lg-inline text-gray-600 small"
-          ><%= user.username %></span
-        >
+        <img
+          class="img-profile rounded-circle mr-3"
+          src="https://ui-avatars.com/api/?name=<%= user.username %>"
+        />
+        <span class="mr-2 d-none d-lg-inline text-gray-600 small">
+          <%= user.username %>
+        </span>
       </a>
       <!-- Dropdown - User Information -->
       <div
