--- a/views/admin/bank/edit_modal.ejs
+++ b/views/admin/bank/edit_modal.ejs
@@ -27,39 +27,38 @@
       >
         <div class="modal-body">
           <div class="form-group">
-            <label for="name">Name Bank</label>
+            <label for="bankName">Bank Name</label>
             <input
               type="text"
               class="form-control bankName"
               name="bankName"
-              placeholder="Enter name bank"
+              placeholder="Enter Bank Name"
               required
             />
           </div>
           <div class="form-group">
-            <label for="name">Nomor Rekening</label>
+            <label for="accountNumber">Account Number</label>
             <input
-              type="text"
+              type="number"
               class="form-control accountNumber"
               name="accountNumber"
-              placeholder="Enter nomor rekening"
+              placeholder="Enter Account Number"
               required
             />
           </div>
           <div class="form-group">
-            <label for="name">Name</label>
+            <label for="accountName">Account Name</label>
             <input
               type="text"
               class="form-control accountName"
               name="accountName"
-              placeholder="Enter name"
+              placeholder="Enter Account Name"
               required
             />
           </div>
           <div class="form-group">
-            <label for="name">Image</label>
+            <label for="image">Bank Logo</label>
             <input type="file" class="form-control" name="image" />
-            <span>Pilih gambar untuk update image</span>
           </div>
         </div>
         <div class="modal-footer">
