--- a/views/admin/bank/table_bank.ejs
+++ b/views/admin/bank/table_bank.ejs
@@ -3,6 +3,7 @@
   <div class="card-header py-3">
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#add-modal">
       <i class="fas fa-plus"></i>
+      Add Bank
     </button>
   </div>
   <div class="card-body">
