--- a/views/admin/dashboard/view_dashboard.ejs
+++ b/views/admin/dashboard/view_dashboard.ejs
@@ -16,7 +16,6 @@
         <h1 class="h3 mb-4 text-gray-800">Dashboard</h1>
         <!-- Content Row -->
         <div class="row">
-          <!-- Earnings (Monthly) Card Example -->
           <div class="col-xl-4 col-md-6 mb-4">
             <div class="card border-left-primary shadow h-100 py-2">
               <div class="card-body">
@@ -44,7 +43,6 @@
             </div>
           </div>
 
-          <!-- Earnings (Monthly) Card Example -->
           <div class="col-xl-4 col-md-6 mb-4">
             <div class="card border-left-success shadow h-100 py-2">
               <div class="card-body">
@@ -58,21 +56,20 @@
                         mb-1
                       "
                     >
-                      Order
+                      Booking
                     </div>
                     <div class="h5 mb-0 font-weight-bold text-gray-800">
                       <%= booking.length %>
                     </div>
                   </div>
                   <div class="col-auto">
-                    <i class="fas fa-gem fa-2x text-gray-300"></i>
+                    <i class="fas fa-id-card fa-2x text-gray-300"></i>
                   </div>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- Earnings (Monthly) Card Example -->
           <div class="col-xl-4 col-md-6 mb-4">
             <div class="card border-left-info shadow h-100 py-2">
               <div class="card-body">
@@ -99,7 +96,7 @@
                     </div>
                   </div>
                   <div class="col-auto">
-                    <i class="fas fa-hotel fa-2x text-gray-300"></i>
+                    <i class="fas fa-table fa-2x text-gray-300"></i>
                   </div>
                 </div>
               </div>
@@ -118,11 +115,6 @@
   <!-- End of Content Wrapper -->
 </div>
 <!-- End of Page Wrapper -->
-
-<!-- Scroll to Top Button-->
-<a class="scroll-to-top rounded" href="#page-top">
-  <i class="fas fa-angle-up"></i>
-</a>
 
 <!-- Logout Modal-->
 <div
