--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -10,7 +10,7 @@
     <div class="sidebar-brand-icon rotate-n-15">
       <i class="fas fa-laugh-wink"></i>
     </div>
-    <div class="sidebar-brand-text mx-3">Staycation</div>
+    <div class="sidebar-brand-text mx-3">Staycation Admin</div>
   </a>
 
   <!-- Divider -->
@@ -33,7 +33,7 @@
   <!-- Nav Item - Charts -->
   <li class="nav-item">
     <a class="nav-link" href="/admin/category">
-      <i class="fas fa-fw fa-chart-area"></i>
+      <i class="fas fa-fw fa-spinner"></i>
       <span>Category</span></a
     >
   </li>
@@ -41,7 +41,7 @@
   <!-- Nav Item - Charts -->
   <li class="nav-item">
     <a class="nav-link" href="/admin/bank">
-      <i class="fas fa-fw fa-chart-area"></i>
+      <i class="fas fa-fw fa-university"></i>
       <span>Bank</span></a
     >
   </li>
@@ -63,16 +63,8 @@
   <!-- Nav Item - Tables -->
   <li class="nav-item">
     <a class="nav-link" href="/admin/booking">
-      <i class="fas fa-fw fa-table"></i>
+      <i class="fas fa-fw fa-id-card"></i>
       <span>Booking</span></a
     >
   </li>
-
-  <!-- Divider -->
-  <hr class="sidebar-divider d-none d-md-block" />
-
-  <!-- Sidebar Toggler (Sidebar) -->
-  <div class="text-center d-none d-md-inline">
-    <button class="rounded-circle border-0" id="sidebarToggle"></button>
-  </div>
 </ul>
