--- a/views/admin/booking/show_table_detail_booking.ejs
+++ b/views/admin/booking/show_table_detail_booking.ejs
@@ -8,7 +8,7 @@
       <div class="col-md-4">
         <img
           class="py-3"
-          src="https://admin-staycation.herokuapp.com/<%= booking.payment.proofPayment %>"
+          src="https://staycationserver.herokuapp.com/<%= booking.payment.proof %>"
           alt="image"
           style="width: 100%; display: block"
         />
