--- a/views/admin/bank/table_bank.ejs
+++ b/views/admin/bank/table_bank.ejs
@@ -27,7 +27,7 @@
             <td><%= bank[i].accountNumber %></td>
             <td><%= bank[i].accountName %></td>
             <td>
-              <img src="https://admin-staycation.herokuapp.com/<%= bank[i].imageUrl %>" alt="imageUrl" width="70px">
+              <img src="https://staycationserver.herokuapp.com/<%= bank[i].imageUrl %>" alt="imageUrl" width="70px">
             </td>
             <td>
               <form action="/admin/bank/<%= bank[i].id %>?_method=DELETE" method="POST">
