--- a/views/admin/item/detail_item/show_feature.ejs
+++ b/views/admin/item/detail_item/show_feature.ejs
@@ -68,7 +68,7 @@
                   <td><%= feature[i].quantity %></td>
                   <td>
                     <img
-                      src="https://admin-staycation.herokuapp.com/<%= feature[i].imageUrl %>"
+                      src="https://staycationserver.herokuapp.com/<%= feature[i].imageUrl %>"
                       alt="imageUrl"
                       width="70px"
                     />
